# appointment

./: .editorconfig  .gitignore  README.md  docker-compose.yml
backend/: .coveragerc  .env.example  .env.test  Dockerfile  README.md  alembic.ini.example  deploy.dockerfile  google_credentials.json.example  pyproject.toml  requirements-test.txt  requirements.txt
backend/scripts/: dev-entry.sh  dummy_setup.py  entry.sh  uvicorn_log_config.json
backend/src/: alembic.ini  alembic.ini.example  appointment.ini.example  config.py  download_readme.py  main.py  secrets.py
backend/src/appointment/: celery_app.py  defines.py  download_readme.py  l10n.py  main.py  secrets.py  utils.py
backend/src/appointment/commands/: backfill_google_channels.py  create_invite_codes.py  download_legal.py  export_users_to_keycloak.py  generate_documentation_pages.py  refresh_zoom_tokens.py  renew_google_channels.py  renew_zoom_tokens.py  setup.py  update_db.py
backend/src/appointment/controller/: auth.py  calendar.py  data.py  external_connection.py  google_client.py  google_watch.py  mailer.py  zoom.py
backend/src/appointment/controller/apis/: accounts_client.py  fxa_client.py  google_client.py  oidc_client.py  zoom_client.py
backend/src/appointment/database/: models.py  repo.py  schemas.py
backend/src/appointment/database/repo/: __init__.py  appointment.py  attendee.py  availability.py  calendar.py  external_connection.py  google_calendar_channel.py  invite.py  schedule.py  slot.py  subscriber.py
backend/src/appointment/dependencies/: auth.py  database.py  fxa.py  google.py  metrics.py  zoom.py
backend/src/appointment/exceptions/: account_api.py  calendar.py  fxa_api.py  google_api.py  misc.py  validation.py  zoom_api.py
backend/src/appointment/l10n/de/: email.ftl  fields.ftl  main.ftl
backend/src/appointment/l10n/en/: email.ftl  fields.ftl  main.ftl
backend/src/appointment/middleware/: SanitizeMiddleware.py  l10n.py
backend/src/appointment/migrations/: env.py
backend/src/appointment/migrations/versions/: 2023_04_05_1703-eb50007f7a21_change_subscriber_table.py  2023_04_25_1303-5aec90d60d85_calendar_provider.py  2023_04_26_1452-d9ecfcaf83a6_add_google_token.py  2023_04_27_1633-81ace90a911b_add_google_state_id.py  2023_06_08_2201-da069f44bca7_add_calendar_connected.py  2023_06_20_2216-845089644770_add_short_link_hash.py  2023_06_27_1108-f9660871710e_add_general_availability_tables.py  2023_07_27_1102-f9c5471478d0_modify_schedules_table.py  2023_09_22_1157-3789c9fd57c5_extend_schedules_table.py  2023_10_19_1535-2b1d96fb4058_extend_slots_table_for_.py  2023_11_02_2121-9a96baa7ecd5_create_external_connections_.py  2023_11_13_2225-d0c36eef5da9_add_meeting_link_provider_to_.py  2023_11_14_1907-6da5d26beef0_add_meeting_link_provider_to_.py  2023_11_14_2255-7e426358642e_.py  2023_11_15_2052-14c33a37c43c_add_meeting_link_id_to_slots_.py  2023_12_04_1807-c4a5f0df612c_add_password_to_subscriber_table.py  2023_12_05_0027-7f8b4f463f1d_update_external_connections_.py  2023_12_05_1734-0dc429ca07f5_add_avatar_url_to_subscribers_.py  2024_01_09_1652-ad7cc2de5ff8_add_minimum_valid_iat_time_to_subscribers.py  2024_01_10_2259-502c76bc79e0_add_time_created_and_time_.py  2024_01_12_1801-ea551afc14fc_merge_commit.py  2024_03_13_1621-f92bae6c27da_update_subscribers_table_to_.py  2024_03_25_2221-bbdfad87a7fb_fix_null_timestamps.py  2024_03_26_1721-e4c5a32de9fb_add_uuid_to_appointments_table.py  2024_04_04_2227-47b5a1508312_fix_encrypted_fields.py  (+52 more)
backend/src/appointment/routes/: account.py  api.py  auth.py  caldav.py  commands.py  google.py  invite.py  metrics.py  schedule.py  subscriber.py  waiting_list.py  webhooks.py  zoom.py
backend/src/appointment/tasks/: __init__.py  emails.py  google.py  health.py  locks.py  zoom.py
backend/src/appointment/tmp/: .gitignore
backend/src/controller/: auth.py  calendar.py  data.py  google.py  google_client.py  mailer.py
backend/src/database/: database.py  models.py  repo.py  schemas.py
backend/src/dependencies/: auth.py  google.py
backend/src/exceptions/: account_api.py  google_api.py
backend/src/migrations/: env.py  script.py.mako
backend/src/migrations/versions/: 2023_04_05_1703-eb50007f7a21_change_subscriber_table.py  2023_04_25_1303-5aec90d60d85_calendar_provider.py  2023_04_26_1452-d9ecfcaf83a6_add_google_token.py  2023_04_27_1633-81ace90a911b_add_google_state_id.py  2023_06_08_2201-da069f44bca7_add_calendar_connected.py  2023_06_20_2216-845089644770_add_short_link_hash.py  2023_06_27_1108-f9660871710e_add_general_availability_tables.py  2023_07_27_1102-f9c5471478d0_modify_schedules_table.py  2023_09_22_1157-3789c9fd57c5_extend_schedules_table.py
backend/src/routes/: account.py  api.py  google.py  schedule.py
backend/test/: README.md  conftest.py  defines.py  test_main.py
backend/test/factory/: appointment_factory.py  attendee_factory.py  calendar_factory.py  external_connection_factory.py  invite_bucket_factory.py  invite_factory.py  schedule_factory.py  slot_factory.py  subscriber_factory.py  waiting_list_factory.py
backend/test/integration/: test_account.py  test_appointment.py  test_auth.py  test_caldav.py  test_caldav_routes.py  test_calendar.py  test_general.py  test_google_calendar_webhook.py  test_invite.py  test_middleware.py  test_profile.py  test_schedule.py  test_subscriber.py  test_waiting_list.py  test_webhooks.py  test_zoom.py
backend/test/unit/: test_accounts_client.py  test_auth_controller.py  test_auth_dependency.py  test_cache.py  test_calendar_tools.py  test_commands.py  test_data.py  test_fxa_client.py  test_google_client.py  test_google_webhook.py  test_handle_availability_decision.py  test_mailer.py  test_models.py  test_schedule_availability.py  test_schedule_repo.py  test_schemas.py  test_subscriber_repo.py  test_utils.py
pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.stage.yaml  Pulumi.yaml  README.md  __main__.py  cloudfront-rewrite.js  cloudfront.py  config.dev.yaml  config.prod.yaml  config.stage.yaml  fargate.py  pyproject.toml  redis.py  requirements.txt  ruff.toml  security_groups.py  sqs.py
(+584 files in other folders)
