[project]
name = "appointment"
version = "0.2.0"
description = "Backend component to Thunderbird Appointment"
requires-python = ">3.11"
dynamic = ["dependencies"]

[project.scripts]
run-command = "appointment.main:cli"

[project.urls]
homepage = "https://appointment.day"
repository = "https://github.com/thunderbird/appointment.git"

[project.optional-dependencies]
cli = [
    "ruff",
]
db = [
    "mysqlclient==2.1.1",
    "mysql-connector-python==8.0.32",
]
test = [
    "Faker==20.1.0",
    "httpx==0.25.1",
    "pytest==7.4.3",
    "freezegun==1.4.0",
    "coverage==7.4.3",
]
deploy = ['appointment[cli]', 'appointment[db]']

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Ruff
[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Always generate Python 3.11-compatible code.
target-version = "py311"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = "test"

[tool.coverage.run]
omit = [
    # Omit test folder
    "test/*"
]
